Fixed a bunch of alignment issues with files on the dashboard

--- a/public/assets/css/_project-sass/_project-Base.scss
+++ b/public/assets/css/_project-sass/_project-Base.scss
@@ -60,5 +60,5 @@ a{
 @import 'project-Footer';		// Project Specific Footer Styling
 
 .alert{
-   background-color:#F39C12; color:#fff;
+   background-color:#F5BA00; color:#fff;
 }
